# UniFECAF-portal-do-aluno

./: .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  deploy_ec2.sh  docker-compose.yml  start_and_seed.sh
backend/: .gitignore  AGENTS.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_common_extensions.py  002_auth_domain.py  003_academics_domain.py  004_finance_domain.py  005_comm_domain.py  006_documents_domain.py  007_audit_domain.py  008_seed_data.py  009_remove_campus.py  010_finance_business_rules.py  010_remove_staff_role.py  011_payment_method.py  011_student_soft_delete.py  013_student_business_rules.py  014_courses_subjects_business_rules.py  015_merge_branches.py  016_comm_docs_enhancements.py  017_audit_indexes.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  errors.py  security.py
backend/app/db/: __init__.py  utils.py
backend/app/models/: __init__.py  academics.py  audit.py  auth.py  documents.py  finance.py  notifications.py  user.py
backend/app/routers/: __init__.py  auth.py  health.py  home.py
backend/app/schemas/: __init__.py  admin_academics.py  admin_audit.py  admin_comm.py  admin_dashboard.py  admin_documents.py  admin_finance.py  admin_users.py  auth.py  common.py  home.py  me.py
backend/tests/: __init__.py  conftest.py  test_admin_smoke.py  test_auth_flow.py  test_auth_v1.py  test_database.py  test_me_endpoints.py  test_rbac.py
(+238 files in other folders)
